--- a/config/haraka/wildduck.yaml
+++ b/config/haraka/wildduck.yaml
@@ -1,7 +1,7 @@
 ## Connect to a master instance or Redis
 redis:
     port: 6379
-    host: 'redis'
+    host: 'wildduck-redis'
     db: 3
 #  password: ""
 
