--- a/config/zone-mta/dbs-production.toml
+++ b/config/zone-mta/dbs-production.toml
@@ -5,7 +5,7 @@
 mongo="mongodb://wildduck-mongo:27017/wildduck"
 
 # Redis connection string
-redis="redis://redis:6379/2"
+redis="redis://wildduck-redis:6379/2"
 
 # Database name for ZoneMTA data in MongoDB. In most cases it should be the same as in the connection string
 sender="zone-mta"
